# stock-price-forecasting

./: .gitignore  README.md  main.py  pyproject.toml
data/raw/: Industry_Month.csv
notebooks/: model.ipynb  preprocessing_analysis.ipynb  raw_data_analysis.ipynb
paper/: README.MD
src/: Window_Generator.py  util_cross_val.py
src/model/: Arima_main.py  Arima_model.py  LSTM_main.py  LSTM_model.py  main_model.py
src/preprocess/: data_formating.py  decomp_per_id.py  holdout_decomposer_per_id.py  main_preprocess.py  normalize_per_id.py  plot_decomposition.py
