[project]
name = "stocks-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.0.1",
    "ipynb>=0.5.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.5",
    "tqdm>=4.67.1",
]
